--- a/index.html
+++ b/index.html
@@ -83,14 +83,14 @@
 
     <div class="content">
         <h2>🖼️ Góc Ảnh Kỷ Niệm</h2>
-        <img src="C:\Users\laptoptk\OneDrive\Máy tính\Tài liệu tốt nghiệp\z6378293736573_cd006112e730ffaa6affeaf9272109fd.jpg" alt="Ảnh kỷ niệm"; width="1100px"; height="900px" >
+        <img src="z6378293736573_cd006112e730ffaa6affeaf9272109fd.jpg" alt="Ảnh kỷ niệm"; width="1100px"; height="900px" >
         <p>Những khoảnh khắc đáng nhớ !</p>
     </div>
 
     <div class="content">
         <h2>🎥 Video Kỷ Niệm</h2>
         <video width="600" controls>
-            <source src="C:\Users\laptoptk\Videos\6400969422835.mp4" type="video/mp4">
+            <source src="6400969422835.mp4" type="video/mp4">
             <source src="video.webm" type="video/webm">
             Trình duyệt của bạn không hỗ trợ video.
         </video>        
